# Convolutional-Neural-Networks

./: Dockerfile  README.md  cnn.pth  main.py  pyproject.toml
app/: main.py  model_loader.py
