[project]
name = "cnn-api"
version = "0.1.0"
description = "A simple CNN model with FastAPI for image classification"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.119.0",
    "python-multipart>=0.0.20",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "uvicorn>=0.38.0",
    "pillow>=10.0.0",
]
